welcome.lessons.welcome.traversal.zigzag.TraversalZigZag.scala.error
ZigZag:13: error: not found: value Direction
	Direction.EST();
        ^ZigZag:18: error: not found: value Direction
	Direction.OUEST();
        ^ZigZag:22: error: type mismatch;
 found   : Unit
 required: Boolean
		if (d())
                     ^ZigZag:26: error: not found: value y
				setPos(x,y+1)
                                         ^ZigZag:17: error: method d is defined twice
  conflicting symbols both originated in file 'plm.runtime135.ZigZag'
def d(){
    ^ZigZag:32: error: not found: value g
		if (g())
                    ^ZigZag:36: error: not found: value y
				setPos(x,y+2)
                                         ^